--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,8 @@ services:
     ports:
       - 7860:7860
     environment:
+      # A comma separated list of model version ids to load
       CIVITAI_MODEL_VERSION_IDS: 131579
-      LOAD_REFINER: 1
+
+      # Set to 1 to enable the refiner
+      LOAD_REFINER: 0
