--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,9 @@ services:
       - 7860:7860
     environment:
       # A comma separated list of model version ids to load
-      CIVITAI_MODEL_VERSION_IDS: 131579
+      CIVITAI_MODEL_VERSION_IDS: 142421
 
       # Set to 1 to enable the refiner
       LOAD_REFINER: 0
+
+      EXTENSIONS: 'deforum|https://github.com/deforum-art/sd-webui-deforum'
