--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
               count: all
     ports:
       - 7860:7860
+    volumes:
+      - ./models:/data/models
     environment:
       # A comma separated list of model version ids to load
       CIVITAI_MODEL_VERSION_IDS: 122143,128713
