build improvements, sdxl base support, readiness probe

--- a/Dockerfile.baked
+++ b/Dockerfile.baked
@@ -2,7 +2,12 @@ ARG VERSION=dynamic
 
 FROM saladtechnologies/sdnext:$VERSION
 
-ARG CIVITAI_MODEL_VERSION_IDS="122143,128713"
-ENV CIVITAI_MODEL_VERSION_IDS=$CIVITAI_MODEL_VERSION_IDS
+ARG CIVITAI_MODEL_VERSION_IDS="" \
+  LOAD_REFINER=0 \
+  LOAD_SDXL_BASE=0
+
+ENV CIVITAI_MODEL_VERSION_IDS=$CIVITAI_MODEL_VERSION_IDS \
+  LOAD_REFINER=$LOAD_REFINER \
+  LOAD_SDXL_BASE=$LOAD_SDXL_BASE
 
 RUN LOAD_ONLY=1 ./entrypoint
