--- a/scripts/build
+++ b/scripts/build
@@ -1,5 +1,17 @@
 #! /usr/bin/env bash
 
+## Usage: ./build [--push]
+
+set -euo pipefail
+
+if [[ $# -gt 0 && $1 == "--push" ]]; then
+  push=true
+else
+  push=false
+fi
+
+git_sha=$(git rev-parse --short HEAD)
+
 docker buildx build \
   -t saladtechnologies/sdnext:dynamic \
   -f Dockerfile \
@@ -7,3 +19,13 @@ docker buildx build \
   --output type=docker \
   --provenance false \
   .
+
+docker tag saladtechnologies/sdnext:dynamic saladtechnologies/sdnext:dynamic-$git_sha
+
+if [[ $push == true ]]; then
+  echo "Pushing saladtechnologies/sdnext:dynamic"
+  docker push saladtechnologies/sdnext:dynamic
+
+  echo "Pushing saladtechnologies/sdnext:dynamic-$git_sha"
+  docker push saladtechnologies/sdnext:dynamic-$git_sha
+fi
