document new config options

--- a/Dockerfile.baked
+++ b/Dockerfile.baked
@@ -4,10 +4,20 @@ FROM saladtechnologies/sdnext:$VERSION
 
 ARG CIVITAI_MODEL_VERSION_IDS="" \
   LOAD_REFINER=0 \
-  LOAD_SDXL_BASE=0
+  LOAD_SDXL_BASE=0 \
+  CONTROLNET_URLS="" \
+  EXTENSION_URLS="" \
+  CKPT_URLS="" \
+  VAE_URLS="" \
+  LORA_URLS=""
 
 ENV CIVITAI_MODEL_VERSION_IDS=$CIVITAI_MODEL_VERSION_IDS \
   LOAD_REFINER=$LOAD_REFINER \
-  LOAD_SDXL_BASE=$LOAD_SDXL_BASE
+  LOAD_SDXL_BASE=$LOAD_SDXL_BASE \
+  CONTROLNET_URLS=$CONTROLNET_URLS \
+  EXTENSION_URLS=$EXTENSION_URLS \
+  CKPT_URLS=$CKPT_URLS \
+  VAE_URLS=$VAE_URLS \
+  LORA_URLS=$LORA_URLS
 
 RUN LOAD_ONLY=1 ./entrypoint
