--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,21 +9,25 @@ services:
             - driver: nvidia
               capabilities: [ gpu ]
               count: all
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 7860:7860
-    volumes:
-      - ./data:/webui/data/
-      - ./controlnet-models:/webui/extensions-builtin/sd-webui-controlnet/models/
+    # volumes:
+      # - ./data:/webui/data/
+      # - ./controlnet-models:/webui/extensions-builtin/sd-webui-controlnet/models/
     environment:
       HOST: 0.0.0.0
       ### A comma separated list of model version ids to load
-      CIVITAI_MODEL_VERSION_IDS: 135867,126688
+      # CIVITAI_MODEL_VERSION_IDS: 130072
       ### Set to 1 to enable the refiner
       # LOAD_REFINER: 0
+      CKPT_URLS: https://civitai.com/api/download/models/114367?type=Model&format=SafeTensor&size=full&fp=fp16
 
       ### Set to 1 to enable base sdxl
-      LOAD_SDXL_BASE: 1
+      # LOAD_SDXL_BASE: 1
 
-      CONTROLNET_URLS: https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/diffusers_xl_canny_mid.safetensors?download=true
+      # CONTROLNET_URLS: https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/diffusers_xl_canny_mid.safetensors?download=true
     ### A comma separated list of extensions to load, each in the format of `name\|repoUrl`
     # EXTENSIONS: 'deforum|https://github.com/deforum-art/sd-webui-deforum'
